config-root/namespaces/jx-staging/nodehttp/deployment.yaml
# Source: nodehttp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodehttp-nodehttp
  labels:
    draft: draft-app
    chart: "nodehttp-1.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodehttp-nodehttp
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodehttp-nodehttp
    spec:
      containers:
        - name: nodehttp
          image: "10.102.6.93/a-roberts/nodehttp:1.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
