config-root/namespaces/jx-staging/nodehttp/ingress.yaml
# Source: nodehttp/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodehttp
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodehttp
              servicePort: 80
      host: nodehttp-jx.192.168.99.100.nip.io
